# adventofcode

./: README.md
cpp/: .gitignore  CMakeLists.txt
cpp/aoc/core/: CMakeLists.txt  getline_view.cpp  getline_view.hpp  getline_view.test.cpp  input.cpp  input.hpp  input.test.cpp  trim.cpp  trim.hpp  trim.test.cpp
cpp/aoc/unit_test/: CMakeLists.txt  catch2.hpp
cpp/cmake/: CompilerWarnings.cmake  TestUtils.cmake
cpp/cmake/toolchains/: clang-cl.cmake  msvc.cmake
